# mlops-exercise-01

./: .dockerignore  .flake8  Dockerfile  Makefile  pyproject.toml
.github/workflows/: ci-cd.yml
src/: main.py
tests/: test_main.py
tests/e2e/: test_api.py
