[tool.poetry]
name = "mlops-exercise-01"
version = "0.1.0"
description = ""
authors = ["Erick Okal <bobbydasilva98@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.1"
mypy = "^1.17.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
pytest-cov = "^6.2.1"

[tool.black]
line-length = 88

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
files = "src"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
